--- a/WEB/Views/Meeting/MeetingScheduleToLargeUnderLine.cshtml
+++ b/WEB/Views/Meeting/MeetingScheduleToLargeUnderLine.cshtml
@@ -76,6 +76,7 @@
     <input id="MeetingMode" type="hidden" value="@Model.meetingmode" />
     <input id="doctortype" type="hidden" value="@Model.doctortype" />
     <input id="isAccept" type="hidden" value="@isAccept.ToString()" />
+    <input id="isToMeetingInfo" type="hidden" value="@(ViewBag.IsToMeetingInfo.ToString())" />
     <div class="title" id='title'>
         @Model.mtitle
     </div>
@@ -258,7 +259,7 @@
                                     btn: ['我知道了'],
                                     yes: function () {
                                         layer.closeAll();
-                                        window.location.href = "/IO/Meeting/Index/1";
+                                        window.location.href = ($('#isToMeetingInfo').val() == 'True') ? ("/IO/Meeting/MeetingInfo/" + $("#mid").val()) : "/IO/Meeting/Index/1";
                                     }
                                 });
                             }
@@ -268,7 +269,7 @@
                                     btn: 'OK',
                                     yes: function () {
                                         layer.closeAll();
-                                        window.location.href = "/IO/Meeting/Index/1";
+                                        window.location.href = ($('#isToMeetingInfo').val() == 'True') ? ("/IO/Meeting/MeetingInfo/" + $("#mid").val()) : "/IO/Meeting/Index/1";
                                     }
                                 });
                             }
