--- a/WEB/Views/Survey/AlreadySurveyPrompt.cshtml
+++ b/WEB/Views/Survey/AlreadySurveyPrompt.cshtml
@@ -10,7 +10,6 @@
     <title>返回</title>
     <script src="~/Scripts/jquery.min.js"></script>
     <script src="~/Scripts/layer.mobile/layer.js"></script>
-
 </head>
 <body>
     <div>
@@ -21,6 +20,11 @@
             content: "您已完成提交，感谢您的参与。",
             shadeClose: false
         });
+
+        setTimeout(function () {
+            layer.closeAll();
+        WeixinJSBridge.call('closeWindow');
+                        }, 3000);
     </script>
 </body>
 </html>
