去掉调研前的ABCD，以及调研页面样式优化。

--- a/WEB/Views/Sign/Success.cshtml
+++ b/WEB/Views/Sign/Success.cshtml
@@ -76,7 +76,7 @@
     <section>
         @if (!isImport && meeting.meetingmode == 3)
         {
-            <h3 style="color:#337ab7;">@meeting.mtitle</h3>
+            <h3 class="headTitle" style="color:#337ab7; word-break: break-all;">@meeting.mtitle</h3>
 
             <div class="doctor">
                 <div class='l'>
@@ -104,7 +104,7 @@
         }
         else
         {
-            <h3>@meeting.mtitle</h3>
+            <h3 class="headTitle" style="word-break: break-all;">@meeting.mtitle</h3>
 
             <div class="doctor">
                 <div class='l'>
@@ -171,6 +171,10 @@
 
     <script src='/IO/Scripts/zepto.min.js'></script>
     <script>
+
+
+        (document.querySelector('.headTitle').innerHTML.length > 36) && (document.querySelector('.headTitle').style.fontSize = '.4rem');
+
         @*@if (!isImport && meeting.meetingmode == 3)
         {
 
