--- a/WEB/Views/Survey/Index.cshtml
+++ b/WEB/Views/Survey/Index.cshtml
@@ -31,6 +31,8 @@
             position: absolute;
             text-align: center;
             padding: 0 .5rem;
+            word-break: break-all;
+            font-family: Arial,'Times New Roman','Microsoft YaHei',SimHei;
         }
 
 
@@ -130,13 +132,21 @@
                                             <li class="chioced clearfix">
                                                 @*选中状态改为checkdbtn*@
                                                 <div class="checkbtn" data-value="@ans[i]" data-id="@list[index].sid"></div>
-                                                <p>@ans[i]</p>
+                                                @{ 
+                                                    List<string> answerStrList= ans[i].Split(':').ToList();
+                                                    if (answerStrList != null&& answerStrList.Count() > 1)
+                                                    {
+                                                        answerStrList.RemoveAt(0);
+                                                    }
+                                                    var answerStr = string.Join(":", answerStrList.ToArray());
+                                                }
+                                                <p>@(answerStr)</p>
                                             </li>
                                         }
-                                    }
-                                }
-                                else
-                                {
+                                                                }
+                                                            }
+                                                            else
+                                                            {
                                     <textarea class="inputArea" placeholder="请输入内容，最多100个字" data-id="@list[index].sid" maxlength="100"></textarea>
                                 }
                             </ul>
@@ -167,6 +177,10 @@
             //$(".bakgray").height(documentHeight);
 
         });
+
+        
+
+
         $(".chioced").click(function () {
             var dataNum = $(this).parent().parent().attr("data-value");
             if (dataNum == 1) {
@@ -208,6 +222,10 @@
         document.addEventListener('DOMContentLoaded', calculate_size, false);
         calculate_size();
     }
+
+        $('.headTitle').html().length > 67 && $('.headTitle').css('fontSize', '.35rem');
+
+
 
         function AddSurvey() {
             layer.open({ type: 2, shadeClose: false });
